--- a/CalypsoMonitor/CalypsoMonitor.csproj
+++ b/CalypsoMonitor/CalypsoMonitor.csproj
@@ -4,9 +4,11 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CalypsoAPI.WebApi\CalypsoAPI.WebApi.csproj" />
     <ProjectReference Include="..\CalypsoAPI\CalypsoAPI.csproj" />
   </ItemGroup>
 
