--- a/CalypsoMonitor/CalypsoMonitor.csproj
+++ b/CalypsoMonitor/CalypsoMonitor.csproj
@@ -5,11 +5,16 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <PlatformTarget>x64</PlatformTarget>
+    <EnableWindowsTargeting>true</EnableWindowsTargeting>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CalypsoAPI.WebApi\CalypsoAPI.WebApi.csproj" />
     <ProjectReference Include="..\CalypsoAPI\CalypsoAPI.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <FrameworkReference Include="Microsoft.WindowsDesktop.App" />
   </ItemGroup>
 
 </Project> 
